--- a/Project/package.json
+++ b/Project/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.5.3",
     "morgan": "~1.9.1",
     "nocache": "^3.0.4",
+    "paypal-rest-sdk": "^1.8.1",
     "razorpay": "^2.8.3",
     "twilio": "^3.81.0"
   },
