--- a/Project/package.json
+++ b/Project/package.json
@@ -22,6 +22,8 @@
     "nocache": "^3.0.4",
     "paypal-rest-sdk": "^1.8.1",
     "razorpay": "^2.8.3",
+    "referral-code-generator": "^1.0.8",
+    "shortid": "^2.2.16",
     "twilio": "^3.81.0"
   },
   "devDependencies": {
