--- a/Project/package.json
+++ b/Project/package.json
@@ -14,12 +14,17 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
+    "google-auth-library": "^8.5.2",
     "http-errors": "~1.6.3",
     "js-image-zoom": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
     "morgan": "~1.9.1",
     "nocache": "^3.0.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "razorpay": "^2.8.3",
     "referral-code-generator": "^1.0.8",
