--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
-  },
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
+},  
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
